Develop/assets/css/style.css
* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

body {
    background-color: #ddcd6;
}

.header {
    padding: 20px;
        /* chenged to higher accessibility fonts */
    font-family: 'Tahoma', 'Calibri', 'Helvetica', 'Verdana', Arial, sans-serif;
    background-color: #2a607c;
    color: #ffffff;
}

.header h1 {
    display: inline-block;
        /* Font size changed to relative to help with enlarging text only */
    font-size: 6rem;
}

.header h1 .seo {
    color: #d9dcd6;
}

.header div {
    padding-top: 15px;
    margin-right: 20px;
    float: right;
    font-family: 'Tahoma', 'Calibri', 'Helvetica', 'Verdana', sans-serif, 'Helvetica', sans-serif;
    font-size: 2rem;
}

.header div ul {
    list-style-type: none;
}

.header div ul li {
    display: inline-block;
    margin-left: 25px;
}

a {
    color: #ffffff;
    text-decoration: none;
}

p {
    font-size: 1.5rem;
}

.hero {
    height: 70rem;
    width: 100%;
    margin-bottom: 25px;
    background-image: url("../images/digital-marketing-meeting.jpg");
    background-size: cover;
    background-position: center;
}

.float-left {
    float: left;
    margin-right: 25px;
}

.float-right {
    float: right;
    margin-left: 25px;
}

.content {
    width: 75%;
    display: inline-block;
    margin-left: 20px;
}

.benefits {
    margin-right: 20px;
    padding: 20px;
    clear: both;
    float: right;
    width: 20%;
    height: 100%;
    font-family: 'Tahoma', 'Calibri', 'Helvetica', 'Verdana', sans-serif;
    background-color: #2589bd;
      /* line-height enlarged for better visibility */
    line-height: 1.75;
}

.benefit-lead {
    margin-bottom: 32px;
    color: #ffffff;
}

.benefit-brand {
    margin-bottom: 32px;
    color: #ffffff;
}

.benefit-cost {
    margin-bottom: 32px;
    color: #ffffff;
}

.benefit-lead h3 {
    margin-bottom: 10px;
    text-align: center;
    font-size: 2rem;
}

.benefit-brand h3 {
    margin-bottom: 10px;
    text-align: center;
    font-size: 2rem;
}

.benefit-cost h3 {
    margin-bottom: 10px;
    text-align: center;
    font-size: 2rem;
}

.benefit-lead img {
    display: block;
    margin: 10px auto;
    max-width: 150px;
}

.benefit-brand img {
    display: block;
    margin: 10px auto;
    max-width: 150px;
}

.benefit-cost img {
    display: block;
    margin: 10px auto;
    max-width: 150px;
}

.search-engine-optimization {
    margin-bottom: 20px;
    padding: 50px;
    height: 300px;
      /*calibri needed '' */
    font-family: 'Tahoma', 'Calibri', 'Helvitica', 'Verdana', sans-serif;
    background-color: #0072bb;
    color: #ffffff;
    line-height: 1.75;
}

.online-reputation-management {
    margin-bottom: 20px;
    padding: 50px;
    height: 300px;
    font-family: 'Tahoma', 'Calibri', 'Helvitica', 'Verdana', sans-serif;
    background-color: #0072bb;
    color: #ffffff;
    line-height: 1.75;
}

.social-media-marketing {
    margin-bottom: 20px;
    padding: 50px;
    height: 300px;
    font-family: 'Tahoma', 'Calibri', 'Helvitica', 'Verdana', sans-serif;
    background-color: #0072bb;
    color: #ffffff;
    line-height: 1.75;
}

.search-engine-optimization img {
    max-height: 200px;
    min-height:100rem;
}

.online-reputation-management img {
    max-height: 200px;
}

.social-media-marketing img {
    max-height: 200px;
}

.search-engine-optimization h2 {
    margin-bottom: 20px;
      /*converted px to rem to maintain size relationship when zooming in */
    font-size: 2.25rem;
}

.online-reputation-management h2 {
    margin-bottom: 20px;
    font-size: 2.25rem;
}

.social-media-marketing h2 {
    margin-bottom: 20px;
    font-size: 2.25rem;
}

      /* added @media print to make printout possible for those sensitive to screens */

@media print {
    .header {
      position: static;
    }
    nav {
      display: none;
    }
  }

.footer {
    padding: 30px;
    clear: both;
    font-family: 'Tahoma', 'Calibri', 'Helvetica', 'Verdana', Arial, sans-serif;
    text-align: center;
}

.footer h2 {
    font-size: 1.25rem;
}

